2002-04-01  Richard Williamson  <rjw@apple.com>

        Added log to catch more problems with NS/CFURL.
        
	* src/kwq/KWQKjobclasses.mm:

2002-04-01  Richard Williamson  <rjw@apple.com>

        Cleaned up lots of potentially stale references to controller.
        Added ref count to part.
        
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::init):
	* src/kwq/KWQKloader.mm: (-[URLLoadClient
	IFURLHandle:resourceDataDidBecomeAvailable:]):

2002-04-01  Richard Williamson  <rjw@apple.com>

        Changes to support correct behavior is i/frame margins and
        scroll views.
        
	* src/kdelibs/khtml/html/html_baseimpl.h:
	* src/kdelibs/khtml/rendering/render_body.cpp: (RenderBody::layout):
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::requestFrame):
	* src/kwq/external.h:

2002-04-01  Kenneth Kocienda  <kocienda@apple.com>

        The guts of the fix for this bug:

        Radar 2879234 (Redirected URLs not used for subsequent GETs)

        This change, though small, will fix most of the outstanding problems
        with URL redirects. Some little bits of work need to be done, but much
        of that is on the UI level.

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::begin), (KHTMLPart::setBaseURL):

2002-04-01  Darin Adler  <darin@apple.com>

	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::jScriptEnabled): Hook this up to the
        preference from WebKit.
        (KHTMLPart::jScript): Return 0 if JavaScript is disabled. This is exactly what
        the original KHTMLPart from KDE did.

2002-04-01  Darin Adler  <darin@apple.com>

	* src/kwq/KWQDef.h: Use KWQ_UNSIGNED_TYPES_DEFINED for compatibility with code
        in JavaScriptCore that has to do the same thing.

2002-04-01  Darin Adler  <darin@apple.com>

	* src/kdelibs/khtml/khtmlview.cpp: (KHTMLView::restoreScrollBar): Disable code
        that checks if the scroll bar is visible, because it currently doesn't do us